diesel_compile_tests/tests/fail/insert_from_select_requires_valid_column_list.stderr
error[E0271]: type mismatch resolving `<SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<(users::columns::name, users::columns::hair_color)>> as Query>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
    --> tests/fail/insert_from_select_requires_valid_column_list.rs:57:18
     |
57   |         .execute(&mut conn)
     |          ------- ^^^^^^^^^ expected a tuple with 3 elements, found one with 2 elements
     |          |
     |          required by a bound introduced by this call
     |
     = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
                found tuple `(diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
     = note: required for `diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<(users::columns::name, users::columns::hair_color)>>, (posts::columns::user_id, posts::columns::title, posts::columns::body)>` to implement `QueryFragment<_>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<posts::table, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<(users::columns::name, users::columns::hair_color)>>, (posts::columns::user_id, posts::columns::title, posts::columns::body)>>` to implement `QueryFragment<_>`
     = note: required for `InsertStatement<posts::table, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<(users::columns::name, users::columns::hair_color)>>, (posts::columns::user_id, posts::columns::title, posts::columns::body)>>` to implement `ExecuteDsl<_, _>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::execute`

error[E0271]: type mismatch resolving `<comments::columns::post_id as diesel::query_builder::insert_statement::column_list::ColumnList>::Table == posts::table`
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:63:23
    |
63  |         .into_columns(comments::post_id);
    |          ------------ ^^^^^^^^^^^^^^^^^ expected struct `posts::table`, found struct `comments::table`
    |          |
    |          required by a bound introduced by this call
    |
    = note: struct `comments::table` and struct `posts::table` have similar names, but are actually distinct types
note: struct `comments::table` is defined in module `crate::comments` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:22:1
    |
22  | / table! {
23  | |     comments (post_id) {
24  | |         post_id -> Integer,
25  | |         body -> Nullable<Text>,
26  | |     }
27  | | }
    | |_^
note: struct `posts::table` is defined in module `crate::posts` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:14:1
    |
14  | / table! {
15  | |     posts (user_id) {
16  | |         user_id -> Integer,
17  | |         title -> Text,
18  | |         body -> Nullable<Text>,
19  | |     }
20  | | }
    | |_^
note: required by a bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
   --> $DIESEL/src/query_builder/insert_statement/mod.rs
    |
    |         C2: ColumnList<Table = T> + Expression,
    |                        ^^^^^^^^^ required by this bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
    = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<posts::columns::title as diesel::Expression>::SqlType == diesel::sql_types::Integer`
  --> tests/fail/insert_from_select_requires_valid_column_list.rs:68:10
   |
68 |         .into_columns(title);
   |          ^^^^^^^^^^^^ type mismatch resolving `<posts::columns::title as diesel::Expression>::SqlType == diesel::sql_types::Integer`
   |
note: expected this to be `diesel::sql_types::Text`
  --> tests/fail/insert_from_select_requires_valid_column_list.rs:17:18
   |
17 |         title -> Text,
   |                  ^^^^

error[E0277]: the trait bound `(comments::columns::post_id, posts::columns::title): diesel::query_builder::insert_statement::column_list::ColumnList` is not satisfied
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:73:23
    |
73  |         .into_columns((comments::post_id, title));
    |          ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `diesel::query_builder::insert_statement::column_list::ColumnList` is not implemented for `(comments::columns::post_id, posts::columns::title)`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `diesel::query_builder::insert_statement::column_list::ColumnList`:
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
              (T0, T1, T2, T3, T4, T5)
              (T0, T1, T2, T3, T4, T5, T6)
              (T0, T1, T2, T3, T4, T5, T6, T7)
              (T0, T1, T2, T3, T4, T5, T6, T7, T8)
            and 8 others
note: required by a bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
   --> $DIESEL/src/query_builder/insert_statement/mod.rs
    |
    |         C2: ColumnList<Table = T> + Expression,
    |             ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`

error[E0271]: type mismatch resolving `<comments::columns::post_id as diesel::query_builder::insert_statement::column_list::ColumnList>::Table == posts::table`
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:78:23
    |
78  |         .into_columns((comments::post_id, comments::body));
    |          ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `posts::table`, found struct `comments::table`
    |          |
    |          required by a bound introduced by this call
    |
    = note: struct `comments::table` and struct `posts::table` have similar names, but are actually distinct types
note: struct `comments::table` is defined in module `crate::comments` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:22:1
    |
22  | / table! {
23  | |     comments (post_id) {
24  | |         post_id -> Integer,
25  | |         body -> Nullable<Text>,
26  | |     }
27  | | }
    | |_^
note: struct `posts::table` is defined in module `crate::posts` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:14:1
    |
14  | / table! {
15  | |     posts (user_id) {
16  | |         user_id -> Integer,
17  | |         title -> Text,
18  | |         body -> Nullable<Text>,
19  | |     }
20  | | }
    | |_^
    = note: required for `(comments::columns::post_id, comments::columns::body)` to implement `diesel::query_builder::insert_statement::column_list::ColumnList`
note: required by a bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
   --> $DIESEL/src/query_builder/insert_statement/mod.rs
    |
    |         C2: ColumnList<Table = T> + Expression,
    |                        ^^^^^^^^^ required by this bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
    = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<comments::columns::body as diesel::query_builder::insert_statement::column_list::ColumnList>::Table == posts::table`
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:78:23
    |
78  |         .into_columns((comments::post_id, comments::body));
    |          ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `posts::table`, found struct `comments::table`
    |          |
    |          required by a bound introduced by this call
    |
    = note: struct `comments::table` and struct `posts::table` have similar names, but are actually distinct types
note: struct `comments::table` is defined in module `crate::comments` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:22:1
    |
22  | / table! {
23  | |     comments (post_id) {
24  | |         post_id -> Integer,
25  | |         body -> Nullable<Text>,
26  | |     }
27  | | }
    | |_^
note: struct `posts::table` is defined in module `crate::posts` of the current crate
   --> tests/fail/insert_from_select_requires_valid_column_list.rs:14:1
    |
14  | / table! {
15  | |     posts (user_id) {
16  | |         user_id -> Integer,
17  | |         title -> Text,
18  | |         body -> Nullable<Text>,
19  | |     }
20  | | }
    | |_^
    = note: required for `(comments::columns::post_id, comments::columns::body)` to implement `diesel::query_builder::insert_statement::column_list::ColumnList`
note: required by a bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
   --> $DIESEL/src/query_builder/insert_statement/mod.rs
    |
    |         C2: ColumnList<Table = T> + Expression,
    |                        ^^^^^^^^^ required by this bound in `InsertStatement::<T, diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<U, C>, Op, Ret>::into_columns`
    = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<(posts::columns::user_id, posts::columns::body) as diesel::Expression>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/insert_from_select_requires_valid_column_list.rs:83:10
   |
83 |         .into_columns((user_id, body));
   |          ^^^^^^^^^^^^ expected struct `diesel::sql_types::Nullable`, found struct `diesel::sql_types::Text`
   |
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`

error[E0271]: type mismatch resolving `<(posts::columns::title, posts::columns::body) as diesel::Expression>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/insert_from_select_requires_valid_column_list.rs:88:10
   |
88 |         .into_columns((title, body));
   |          ^^^^^^^^^^^^ expected struct `diesel::sql_types::Text`, found struct `diesel::sql_types::Integer`
   |
   = note: expected tuple `(diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
